<resources>
    <string name="timer_zero">00:00</string>
    <string name="timer_start">00:30</string>
    <string name="countdown_start">3</string>
    <string name="score_start">Puntuación: 0</string>
    <string name="app_name">Juego de colores</string>
    <string name="titulo_juego">Juego de Colores</string>
    <string name="iniciar_juego">Comenzar Juego</string>
    <string name="descripcion_juego">El juego consiste en presionar el botón que coincida con el color que aparece en la pantalla</string>
    <string name="timer_icon">Icono de temporizador</string>
    <string name="button_click">Click</string>
    <string name="game_image_desc">Imagen del juego</string>
    <string name="color_name">Nombre color</string>
    <string name="adivinar_color">Adivina el color:</string>
    <string name="score_text">Puntuación: %1$d</string>
    <string name="resultado_text">Puntos: %1$d</string>
    <string name="volver_a_jugar">Volver a jugar</string>
    <string name="volver_menu_inicio">Volver al inicio</string>
</resources>