<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen_resultado"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/tituloJuegoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/titulo_juego"
        android:textColor="@color/negro"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:background="@drawable/bg_back"
        android:fontFamily="sans-serif-black"
        android:text="@string/resultado_text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/volverMenuInicioButton"
        android:layout_width="171dp"
        android:layout_height="67dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/violeta"
        android:fontFamily="sans-serif-black"
        android:text="@string/volver_menu_inicio"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/volverAJugarButton"
        android:layout_width="171dp"
        android:layout_height="67dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/violeta"
        android:fontFamily="sans-serif-black"
        android:text="@string/volver_a_jugar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>