<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/imagen_fondo"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_back"
        android:padding="8dp"
        android:text="@string/score_start"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/timer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_back"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/timer_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/timer_icon"
            android:src="@android:drawable/ic_lock_idle_alarm"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/timer_start"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:id="@+id/game_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/game_image_desc"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_container"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/color_name_text"
        android:layout_width="225dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/bg_back"
        android:text="@string/adivinar_color"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_image" />

    <TextView
        android:id="@+id/color_dynamic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/color_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_name_text" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="400dp"
        android:layout_height="235dp"
        android:layout_marginTop="392dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_container">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="174dp"
                android:layout_height="80dp"
                android:layout_marginEnd="36dp"
                android:backgroundTint="@color/rojo"
                android:contentDescription=""
                android:focusable="false"
                android:fontFamily="sans-serif-black"
                android:importantForAccessibility="no"
                android:text="@string/button_click"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/button3"
                android:layout_width="174dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/naranja"
                android:contentDescription=""
                android:focusable="false"
                android:fontFamily="sans-serif-black"
                android:importantForAccessibility="no"
                android:text="@string/button_click"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="174dp"
                android:layout_height="80dp"
                android:layout_marginEnd="36dp"
                android:backgroundTint="@color/verde"
                android:contentDescription=""
                android:focusable="false"
                android:fontFamily="sans-serif-black"
                android:importantForAccessibility="no"
                android:text="@string/button_click"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/button4"
                android:layout_width="174dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/violeta"
                android:contentDescription=""
                android:focusable="false"
                android:fontFamily="sans-serif-black"
                android:importantForAccessibility="no"
                android:text="@string/button_click"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_start"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>